fix(datagrid): fix action overflow positioning

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -27,7 +27,7 @@
 }
 
 @mixin datagrid-action-overflow-appearance {
-  position: absolute;
+  position: relative;
   background: datagrid-variables.$clr-datagrid-popover-bg-color;
   padding: tokens.$cds-global-space-5;
   margin-left: tokens.$cds-global-space-4;
